Handle missing search tags in results

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -3,7 +3,7 @@
     <h1 class="text-3xl font-bold mb-4 text-center">Local Hosts & Guides</h1>
 
     <%= form_with url: search_results_path, method: :get, class: "mb-6", data: { turbo_frame: "search_results", controller: "search-tags" } do |f| %>
-      <input type="hidden" name="tags" value="<%= @search_tags.join(',') %>" data-search-tags-target="hidden">
+      <input type="hidden" name="tags" value="<%= Array(@search_tags).join(',') %>" data-search-tags-target="hidden">
       <input type="text" placeholder="Add tag and press enter" class="w-full px-4 py-2 border rounded" data-search-tags-target="input" data-action="keydown->search-tags#addTag keyup->search-tags#fetchSuggestions">
       <ul class="mt-1 bg-white border rounded shadow" data-search-tags-target="suggestions"></ul>
 
