--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,25 +1,22 @@
-<div class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col chat-container">
-  <div class="max-w-4xl mx-auto w-full flex-grow flex flex-col rounded-lg shadow-lg overflow-hidden">
-    <!-- Header -->
-    <div class="chat-header">
+<%= turbo_frame_tag 'chat_window' do %>
+  <div class="flex flex-col h-full bg-white dark:bg-gray-800">
+    <div class="p-4 border-b border-gray-200 dark:border-gray-700">
       <% other_user = @conversation.sender == current_user ? @conversation.recipient : @conversation.sender %>
-      <h1 class="text-xl font-bold text-gray-900 dark:text-gray-100">Conversation with <%= other_user.display_name %></h1>
+      <h1 class="text-lg font-bold text-gray-900 dark:text-gray-100"><%= other_user.display_name %></h1>
     </div>
 
-    <!-- Message List -->
-    <div class="chat-messages" id="messages" data-controller="chat">
+    <div class="flex-1 overflow-y-auto p-4 space-y-4" id="messages" data-controller="chat">
       <%= turbo_stream_from @conversation %>
       <%= turbo_stream_from @conversation, :typing_indicator %>
       <%= render @messages, is_current_user_message: ->(message) { message.user == current_user } %>
     </div>
 
-    <div id="typing_indicator" class="bg-white dark:bg-gray-800 px-4 pb-2 text-gray-500 dark:text-gray-400 text-sm border-t border-gray-200 dark:border-gray-700">
+    <div id="typing_indicator" class="px-4 pb-2 text-gray-500 dark:text-gray-400 text-sm border-t border-gray-200 dark:border-gray-700">
       <%= render "conversations/typing_indicator", conversation: @conversation %>
     </div>
 
-    <!-- Message Form -->
-    <div class="chat-input-form" id="new_message">
+    <div class="p-4 border-t border-gray-200 dark:border-gray-700" id="new_message">
       <%= render "form", conversation: @conversation, message: @message %>
     </div>
   </div>
-</div>
+<% end %>
